<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_AC"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@drawable/button_light_grey"
        android:text="@string/AC"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/button7"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button0"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@drawable/button_grey"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_point"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_grey"
        android:text="@string/point"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_equals"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_equals"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_yellow"
        android:text="@string/equals"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_point"
        app:layout_constraintTop_toBottomOf="@+id/button_plus" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_plus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_yellow"
        android:text="@string/_plus"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/button_equals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button_minus" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_grey"
        android:text="@string/_3"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/button_point"
        app:layout_constraintEnd_toStartOf="@+id/button_plus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_grey"
        android:text="@string/_2"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_grey"
        android:text="@string/_1"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_grey"
        android:text="@string/_4"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_grey"
        android:text="@string/_5"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_grey"
        android:text="@string/_6"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/button_minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_minus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_yellow"
        android:text="@string/_minus"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/button_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button_multiply" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_multiply"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_yellow"
        android:text="@string/_multiply"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/button_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/button_divide" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button9"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_grey"
        android:text="@string/_9"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/button_multiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button_back" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button8"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_grey"
        android:text="@string/_8"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button_AC" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button7"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_grey"
        android:text="@string/_7"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_AC" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_divide"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_yellow"
        android:text="@string/divide"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/button_multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_back"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_back"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/button_light_grey"
        android:foregroundGravity="top"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@+id/button_divide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_AC"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>